# CalculationLib

./: .gitignore  CMakeLists.txt  Makefile  README.md  unit-testing.cpp
CalculationAlgorithm/: BaseCalculation.cpp  BaseCalculation.h  BaseCalculationAlgorithm.cpp  BaseCalculationAlgorithm.h  CMakeLists.txt  Calculation.cpp  Calculation.h  CalculationAlgorithm.cpp  CalculationAlgorithm.h  CalculationAlgorithmWithXWrapper.cpp  CalculationAlgorithmWithXWrapper.h  CalculationData.h  CalculationModel.cpp  CalculationModel.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionPreparator.cpp  ExpressionPreparator.h  ExpressionToken.h  ExpressionTypes.h  Utils.cpp  Utils.h
CalculationAlgorithm/Handlers/: BracketHandler.h  BracketsHandler.cpp  BracketsHandler.h  ExpressionHandler.cpp  ExpressionHandler.h  FunctionsHandler.cpp  FunctionsHandler.h  HandleStatus.h  NumberHandler.cpp  NumberHandler.h  OperatorsHandler.cpp  OperatorsHandler.h
Extensions/Credit/: CMakeLists.txt  CreditMonthlyPayment.h  CreditMonthlyPaymentAnnuity.cpp  CreditMonthlyPaymentAnnuity.h  CreditMonthlyPaymentDifferentiated.cpp  CreditMonthlyPaymentDifferentiated.h  CreditMonthlyPaymentResult.h
Extensions/CreditLib/: CMakeLists.txt  CreditLib.cpp  CreditLib.h
Extensions/Deposit/: CMakeLists.txt  DepositCalculator.cpp  DepositCalculator.h  DepositParams.h  DepositResult.h
Extensions/DepositLib/: CMakeLists.txt  DepositLib.cpp  DepositLib.h
Model/: Model.h  ModelCalc.cpp  ModelDeposit.cpp
NewModel/: BaseCalculation.cpp  BaseCalculation.h  CalculationData.h  CalculationModel.cpp  CalculationModel.h
OldModel/: CMakeLists.txt  Model.h  ModelCredit.cpp  ModelDeposit.cpp  unit-testing.cpp
Testing/: CMakeLists.txt  CalculationAlgorithmTests.cpp  ExpressionParserTests.cpp  ExpressionPreparatorTests.cpp  PrepareExpressionTests.cpp  ShuntingYardTests.cpp
Tests/: CMakeLists.txt  CalculationAlgorithmTests.cpp  CalculationAlgorithmWithXWrapperTests.cpp  CreditMonthlyPaymentTests.cpp  DepositCalculatorTests.cpp  ShuntingYardTests.cpp
