cmake_minimum_required(VERSION 3.5)
project(CalculationAlgorithmProj LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

if (UNIX)
    add_compile_options(-fPIC)
elseif(APPLE)
    add_compile_options(-fdeclspec)
endif()

add_subdirectory(CalculationAlgorithm)
add_subdirectory(Library)
add_subdirectory(Extensions/Credit)
add_subdirectory(Extensions/CreditLib)
add_subdirectory(Extensions/Deposit)
add_subdirectory(Extensions/DepositLib)
add_subdirectory(Tests)
